// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connection › Router Create context from selected list 1`] = `
Array [
  Object {
    "generator": Array [
      Array [
        Object {
          "id": 7,
          "page": 1,
          "type": "category",
        },
      ],
    ],
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": false,
          },
        ],
        "mstId": "mockedId_3",
        "selectedItem": "",
      },
    ],
    "selectedColumn": "",
  },
]
`;

exports[`Connection › Router Create context from selected list and context object 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": "post",
            "page": 1,
            "type": "latest",
          },
        ],
        Array [
          Object {
            "id": 7,
            "page": 1,
            "type": "category",
          },
        ],
        Array [
          Object {
            "id": 10,
            "page": 1,
            "type": "tag",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "id": "post",
            "mstId": "0_latest_post_page_1",
            "page": 1,
            "type": "latest",
            "visited": false,
          },
        ],
        "mstId": "mockedId_13",
        "selectedItem": "",
      },
      Object {
        "items": Array [
          Object {
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": false,
          },
        ],
        "mstId": "mockedId_14",
        "selectedItem": "0_category_7_page_1",
      },
      Object {
        "items": Array [
          Object {
            "id": 10,
            "mstId": "0_tag_10_page_1",
            "page": 1,
            "type": "tag",
            "visited": false,
          },
        ],
        "mstId": "mockedId_15",
        "selectedItem": "",
      },
    ],
    "selectedColumn": "mockedId_14",
  },
]
`;

exports[`Connection › Router Create context from selected list and context object without selected 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": "post",
            "page": 1,
            "type": "latest",
          },
        ],
        Array [
          Object {
            "id": 3,
            "page": 1,
            "type": "category",
          },
        ],
        Array [
          Object {
            "id": 10,
            "page": 1,
            "type": "tag",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": false,
          },
        ],
        "mstId": "mockedId_19",
        "selectedItem": "0_category_7_page_1",
      },
      Object {
        "items": Array [
          Object {
            "id": "post",
            "mstId": "0_latest_post_page_1",
            "page": 1,
            "type": "latest",
            "visited": false,
          },
        ],
        "mstId": "mockedId_16",
        "selectedItem": "",
      },
      Object {
        "items": Array [
          Object {
            "id": 3,
            "mstId": "0_category_3_page_1",
            "page": 1,
            "type": "category",
            "visited": false,
          },
        ],
        "mstId": "mockedId_17",
        "selectedItem": "",
      },
      Object {
        "items": Array [
          Object {
            "id": 10,
            "mstId": "0_tag_10_page_1",
            "page": 1,
            "type": "tag",
            "visited": false,
          },
        ],
        "mstId": "mockedId_18",
        "selectedItem": "",
      },
    ],
    "selectedColumn": "mockedId_19",
  },
]
`;

exports[`Connection › Router Create context from selected list with previous context 1`] = `
Array [
  Object {
    "generator": Array [
      Array [
        Object {
          "id": 5,
          "page": 1,
          "type": "category",
        },
      ],
    ],
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "id": 5,
            "mstId": "0_category_5_page_1",
            "page": 1,
            "type": "category",
            "visited": false,
          },
        ],
        "mstId": "mockedId_6",
        "selectedItem": "",
      },
    ],
    "selectedColumn": "",
  },
  Object {
    "generator": Array [
      Array [
        Object {
          "id": 7,
          "page": 1,
          "type": "category",
        },
      ],
    ],
    "index": 1,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "id": 7,
            "mstId": "1_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": false,
          },
        ],
        "mstId": "mockedId_7",
        "selectedItem": "",
      },
    ],
    "selectedColumn": "",
  },
]
`;

exports[`Connection › Router Create context from selected single 1`] = `
Array [
  Object {
    "generator": Array [
      Array [
        Object {
          "id": 60,
          "page": undefined,
          "type": "post",
        },
      ],
    ],
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_2",
        "selectedItem": "",
      },
    ],
    "selectedColumn": "",
  },
]
`;

exports[`Connection › Router Create context from selected single and context object 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_8",
        "selectedItem": "",
      },
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "0_post_62",
            "type": "post",
            "visited": false,
          },
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_9",
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "mockedId_9",
  },
]
`;

exports[`Connection › Router Create context from selected single and context object with duplicate items 1`] = `
Array [
  Object {
    "generator": Array [
      Object {
        "items": Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
      },
      Object {
        "items": Array [
          Object {
            "id": 60,
            "type": "post",
          },
          Object {
            "id": 63,
            "type": "post",
          },
        ],
      },
    ],
    "index": 0,
    "infinite": undefined,
    "options": Object {
      "someThemeOption": 123,
    },
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "mstId": "mockedId_39",
              "page": 1,
              "type": "latest",
              "visited": false,
            },
            "id": 63,
            "mstId": "mockedId_38",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_37",
        "selectedItem": "",
      },
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "mstId": "mockedId_42",
              "page": 1,
              "type": "latest",
              "visited": false,
            },
            "id": 60,
            "mstId": "mockedId_41",
            "type": "post",
            "visited": false,
          },
          Object {
            "fromList": Object {
              "id": "post",
              "mstId": "mockedId_44",
              "page": 1,
              "type": "latest",
              "visited": false,
            },
            "id": 63,
            "mstId": "mockedId_43",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_40",
        "selectedItem": "mockedId_41",
      },
    ],
    "selectedColumn": "mockedId_40",
  },
]
`;

exports[`Connection › Router Create context from selected single and context object without selected 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
          Object {
            "id": 64,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_12",
        "selectedItem": "0_post_60",
      },
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_10",
        "selectedItem": "",
      },
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "0_post_62",
            "type": "post",
            "visited": false,
          },
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 64,
            "mstId": "0_post_64",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_11",
        "selectedItem": "",
      },
    ],
    "selectedColumn": "mockedId_12",
  },
]
`;

exports[`Connection › Router Create context from selected single and context object, with previous diff context 1`] = `
Array [
  Object {
    "generator": Array [
      Array [
        Object {
          "id": 60,
          "page": undefined,
          "type": "post",
        },
      ],
    ],
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_22",
        "selectedItem": "",
      },
    ],
    "selectedColumn": "",
  },
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 1,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "1_post_63",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_23",
        "selectedItem": "",
      },
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "1_post_62",
            "type": "post",
            "visited": false,
          },
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "1_post_60",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_24",
        "selectedItem": "1_post_60",
      },
    ],
    "selectedColumn": "mockedId_24",
  },
]
`;

exports[`Connection › Router Create context from selected single with previous context 1`] = `
Array [
  Object {
    "generator": Array [
      Array [
        Object {
          "id": 63,
          "page": undefined,
          "type": "post",
        },
      ],
    ],
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_4",
        "selectedItem": "",
      },
    ],
    "selectedColumn": "",
  },
  Object {
    "generator": Array [
      Array [
        Object {
          "id": 60,
          "page": undefined,
          "type": "post",
        },
      ],
    ],
    "index": 1,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "1_post_60",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_5",
        "selectedItem": "",
      },
    ],
    "selectedColumn": "",
  },
]
`;

exports[`Connection › Router Create context from selected single with previous equal context 1`] = `
Array [
  Object {
    "generator": Array [
      Array [
        Object {
          "id": 60,
          "page": undefined,
          "type": "post",
        },
      ],
    ],
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_20",
        "selectedItem": "",
      },
    ],
    "selectedColumn": "",
  },
  Object {
    "generator": Array [
      Array [
        Object {
          "id": 60,
          "page": undefined,
          "type": "post",
        },
      ],
    ],
    "index": 1,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "items": Array [
          Object {
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "1_post_60",
            "type": "post",
            "visited": false,
          },
        ],
        "mstId": "mockedId_21",
        "selectedItem": "",
      },
    ],
    "selectedColumn": "",
  },
]
`;

exports[`Connection › Router Initializes contexts as empty array 1`] = `Array []`;
